apps/gateway-api/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: labtalos-gateway
  namespace: default
spec:
  gatewayClassName: labtalos
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: labtalos-tls
            namespace: default
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - value: 192.168.1.60
      type: IPAddress
