apps/gateway-api/resources/httproute-nextcloud.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: labtalos-gateway
      namespace: default
  hostnames:
    - nextcloud.izycki.com.br
  rules:
    - backendRefs:
        - name: PREENCHER
          port: 80
